@@ -104,6 +104,10 @@ enum SPAttributeEnum {
     SP_ATTR_INKSCAPE_CURRENT_LAYER,
     SP_ATTR_INKSCAPE_DOCUMENT_UNITS,
     SP_ATTR_INKSCAPE_CONNECTOR_SPACING,
+    /* SPColorProfile */
+    SP_ATTR_LOCAL,
+    SP_ATTR_NAME,
+    SP_ATTR_RENDERING_INTENT,
     /* SPGuide */
     SP_ATTR_ORIENTATION,
     SP_ATTR_POSITION,
