@@ -1,5 +1,13 @@
 2005-04-02  Jon A. Cruz  <jon@joncruz.org>
 
+	* src/color-profile.h, src/color-profile.cpp,
+	 src/color-profile-fns.h, src/Makefile_insert, src/attributes.cpp,
+	 src/attributes.h, src/sp-object-repr.cpp:
+
+	 Adding support for <color-profile> element.
+
+2005-04-02  Jon A. Cruz  <jon@joncruz.org>
+
 	* src/knot.h: Fixed warning messages.
 
 2006-04-01  Jon A. Cruz  <jon@joncruz.org>
